# libxml2

./: .gitignore  CMakeLists.txt  config.h.cmake  libxml.h  rngparser.c
cmake/: libxml2-config.cmake  options.cmake
win32/VC10/: libxml2.vcxproj
